# KU-LAB

./: .gitignore  README.md
IMU_Floor_deteciton_simulation/: CMakeLists.txt  README.md  imu_floor_detection.cpp  imu_floor_detection.h  include  main.cpp  mock  src  viz.cpp  viz.h
IMU_Floor_deteciton_simulation/analysis/: step_start_analysis.py
IMU_Floor_deteciton_simulation/data/Floor_sim_data/: Floor_sim_data_sample.txt  Floor_sim_data_거칠게 걸음.txt  Floor_sim_data_살살걸음.txt  Floor_sim_data_일반보행.txt  generate_dummy_data.py
IMU_Floor_deteciton_simulation/data/new_data/: sim_data_260225-154018.txt  중간에 팔엄청 돌림.txt
IMU_Floor_deteciton_simulation/data/output/: analyze_step_rmsfreq.py  analyze_step_trajectory.py  batch_Floor_sim_data_sample.tsv  batch_Floor_sim_data_거칠게 걸음.tsv  batch_Floor_sim_data_살살걸음.tsv  batch_Floor_sim_data_일반보행.tsv  batch_sim_data_260225-154018.tsv  batch_중간에 팔엄청 돌림.tsv  score_Floor_sim_data_sample.tsv  score_Floor_sim_data_살살걸음.tsv  score_Floor_sim_data_일반보행.tsv  score_sim_data_260225.tsv  step_analysis_Floor_sim_data_260224-163018.tsv  v2_Floor_sim_data_살살걸음.tsv  (+14 more)
IMU_Floor_deteciton_simulation/시각화및데이터분석/: consecutive_trajectory_trace.py  cross_validation.py  cross_validation_report.md  cross_validation_results.tsv  direction_consistency_test.py  ground_vs_up_ratio_analysis.py  ground_vs_up_trace.py  lpf_effect_test.py  realtime_step_analysis.py  realtime_step_features.tsv  rmsfreq_combo_test.py  timeseries_step_analysis.py  trajectory_analysis.py  trajectory_features_per_step.tsv  trajectory_shape_analysis.py  trajectory_shape_features.tsv  시각화.py
(+295 files in other folders)
